tests/equatenosuchstn.out

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 3 survey stations, joined by 2 legs.
There are 0 loops.
Total length of survey legs =   10.00m (  10.00m adjusted)
Total plan length of survey legs =    9.85m
Total vertical length of survey legs =    1.74m
Vertical range = 1.74m (from entrance.1 at 0.00m to entrance.2 at -1.74m)
North-South range = 1.71m (from entrance.1 at 0.00m to entrance.2 at -1.71m)
East-West range = 9.70m (from entrance.2 at 9.70m to entrance.1 at 0.00m)
./equatenosuchstn.svx:8:20: error: Reference to station "nosuchsurvey.1" from non-existent survey "nosuchsurvey"
./equatenosuchstn.svx:8: warning: Station "nosuchsurvey.1" referred to just once, with an explicit survey name - typo?

There were 1 warning(s) and 1 error(s) - no output files produced.
