tests/equatenosuchstn.svx
; pos=fail warn=1 error=1
*fix entrance.1 0 0 0
*begin entrance
*export 1
1 2 10.00 100 -10
*end entrance

*equate entrance.1 nosuchsurvey.1
